<resources>
    <string name="app_name">Tracking Information</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="contaminated">Contaminated</string>
    <string name="substituted">Substituted</string>
    <string name="diluted">Diluted</string>
    <string name="mislabelling">Mislabelling</string>
    <string name="good_no_tampering">Good (No tampering)</string>
    <string name="best">Best</string>
    <string name="current_action_level">Current Action Level</string>
</resources>